[tool.poetry]
name = "openrank-sdk"
version = "0.3.0"
description = ""
authors = [
    "SeungJu Lee <sj@karma3labs.com>",
    "Eugene Kim <ek@karma3labs.com>",
    "Jenya <hypnagonia@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.6.7"
boto3 = ">=1.0"
dataclasses-json = "^0.6.7"
numpy = "<1.25.0"
pandas = "<2.1.0"
sphinx = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
